--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,9 +44,9 @@ jobs:
       - name: Install dependencies
         run: npm ci # 或 pnpm install / yarn install / bun install
       - name: Build with VitePress
-        run: | 
-          npm run build # 或 pnpm build / yarn build / bun run build
-          touch .nojekyll
+        run: |
+          npm run build # 启动项目
+          touch .nojekyll  
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
