--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,9 @@ jobs:
       - name: Install dependencies
         run: npm ci # 或 pnpm install / yarn install / bun install
       - name: Build with VitePress
-        run: npm run build # 或 pnpm docs:build / yarn docs:build / bun run docs:build
+        run: |
+          npm run build # 或 pnpm docs:build / yarn docs:build / bun run docs:build
+          touch .nojekyll  # 通知githubpages不要使用Jekyll处理这个站点，不知道为啥不生效，就手动搞了
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
